Remove hardcoded calls to boot.netboot.xyz
Found a couple hardcoded calls to boot.netboot.xyz still. This fixes those.
(Standardized on http for the calls; we use HTTP to grab the binary anyway...)

--- a/roles/netbootxyz/templates/menu/menu.ipxe.j2
+++ b/roles/netbootxyz/templates/menu/menu.ipxe.j2
@@ -10,7 +10,7 @@ iseq ${buildarch} arm64 && set arch arm64 ||
 :skip_arch_detect
 chain --autofree boot.cfg ||
 echo Attempting to retrieve latest upstream version number...
-chain --timeout 5000 https://boot.netboot.xyz/version.ipxe ||
+chain --timeout 5000 http://${boot_domain}/version.ipxe ||
 ntp {{ time_server }} ||
 iseq ${cls} serial && goto ignore_cls ||
 set cls:hex 1b:5b:4a  # ANSI clear screen sequence - "^[[J"
@@ -122,7 +122,7 @@ iseq ${sigs_enabled} true && set sigs_enabled false || set sigs_enabled true
 goto main_menu
 
 :about
-chain https://boot.netboot.xyz/about.ipxe || chain about.ipxe
+chain http://${boot_domain}/about.ipxe || chain about.ipxe
 goto main_menu
 
 :custom-github
